# django-amqp-ocpp

./: MANIFEST.in  README.md  requirements.txt  setup.cfg
example/: settings.py
ocpp/: admin.py  settings.py  urls.py  views.py
ocpp/migrations/: 0007_alter_chargepoint_error_code.py
ocpp/models/: charge_point.py  message.py
ocpp/services/: charge_point_message_handler.py  charge_point_service.py  queue_consumer.py  queue_publisher.py
ocpp/services/ocpp/core/: boot_notification.py  meter_values.py  status_notification.py  stop_transaction.py
ocpp/templates/: simulator.html
ocpp/tests/services/ocpp/core/: test_status_notification.py
ocpp/types/: error_code.py  message_type.py
ocpp/utils/model/: model_enum.py
