[metadata]
name = django-ampq-ocpp
version = 0.6
description = A Django app to handle OCPP protocol.
long_description = file: README.md
url = https://github.com/ixdlabs/django-ampq-ocpp
author = kdsuneraavinash
author_email = sunera@ixdlabs.com
license = GNU General Public
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2 
    Intended Audience :: Developers
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2.1  
    pika >= 1.3.2
    retry >= 0.9.2
    factory_boy >= 3.3.0